# ttab-parser

./: .env-sample  .gitignore  .replit  CLAUDE.md  Dockerfile  README.md  check_db.py  courtlistener_client.py  demo_analysis.csv  demo_analysis_updated.csv  docker-compose.yml  models.py  pyproject.toml  replit.md  settings-example.toml  ttab_downloader.py  ttab_dtd_documentation.txt  ttab_dtd_summary.md  ttab_parser.py  utils.py
demo_data/: official_ttab_structure.xml  sample_ttab_opinion.xml
src/: celery_app.py  courtlistener_client.py  database.py  db_models.py  persist.py  settings.py  tasks.py  ttab_downloader.py  ttab_parser.py  utils.py
tests/: __init__.py  conftest.py  test_courtlistener.py  test_downloader.py  test_models.py  test_parser.py  test_utils.py
